Fixed sticky layout bug (use items-start)

--- a/src/App.css
+++ b/src/App.css
@@ -118,14 +118,6 @@ html {
 	/* scroll-behavior: smooth; */
 }
 
-/* TODO */
-.grid-contents {
-	position: sticky;
-	top: 128px; /* 128px === py-32 */
-
-	/* max-height: 384px; */
-}
-
 .pb-2\/1 {
 	padding-bottom: 200%;
 }
